0.24 (2006-03-13):
==================

* When printing to a pipe in mbfind or mbget, encode with the locale's
  default encoding instead of corrupting everything into ascii.

* Added a --no-network option to lastfmsubmitd for testing purposes, and
  fixed the --no-daemon option.

* Work around a bug in urllib's error handling that was causing crashes.

0.23 (2006-02-26):
==================

* Make mbfind not print a template unless --template is specified;
  otherwise, it will fail, so that ``mbget || mbsubmit`` works as you
  would expect.

* Clean up error messages and add some for import errors in the
  MusicBrainz stuff.

* Ignore songs with missing data properly; this is the daemon's job now,
  so you don't have to worry about throwing crap at it from your client.
  (Your client should not know anything about the network protocol.)

0.22 (2006-02-23):
==================

* Fix possible truncating of song titles due to stringification. This is
  another brown paper bag fix, isn't it. Today is not my day.

0.21 (2006-02-23):
==================

* Brown paper bag: fix man page install locations.

0.20 (2006-02-23):
==================

* Wrote man pages.

* Convert everything to unicode before serializing. Unfortunately, this
  includes track numbers, but those only exist to make the output easier
  to read. If we need them for something we'll do real number parsing.

0.19 (2006-02-23):
==================

* If mbfind or mbget are printing to a pipe, replace non-ascii values
  rather than raising an error.

* Quote all string values when serializing, so as to be more compatible
  with real YAML implementations.

* If we crash for any reason, write it to the log. Make debug logging a
  bit more useful in general and regular logging perhaps a bit less
  annoying.

0.18 (2006-02-06):
==================

* Gratuitously renamed all the "other" programs. For consistency with
  lastmp, the thing that takes a log and sends it to the daemon is now