@@ -24,10 +24,12 @@ if __name__ == '__main__':
 
     debug = False
     outfile = lastfm.FIFO
+    uselock = True
 
     for opt, arg in opts:
         if opt in ('--output', '-o'):
             outfile = arg
+            uselock = False
         elif opt in ('--debug', '-d'):
             debug = True
 
@@ -73,7 +75,7 @@ if __name__ == '__main__':
             print lastfm.marshaller.dump(s)
     else:
         try:
-            writer = lastfm.queue.Writer(outfile, log)
+            writer = lastfm.queue.Writer(log, outfile, uselock)
             log.info('Sending %s songs to daemon' % len(subs))
             for s in subs:
                 print >>writer, lastfm.marshaller.dump(s)
